parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> sigma
Rule 1     sigma -> LLAVE_IZQUIERDA EMPRESAS DOS_PUNTOS CORCHETE_IZQUIERDO emps CORCHETE_DERECHO LLAVE_DERECHA cierre_arch
Rule 2     sigma -> LLAVE_IZQUIERDA EMPRESAS DOS_PUNTOS CORCHETE_IZQUIERDO emps CORCHETE_DERECHO COMA FIRMA_DIGITAL DOS_PUNTOS opc_s COMA VERSION DOS_PUNTOS opc_s LLAVE_DERECHA cierre_arch
Rule 3     sigma -> LLAVE_IZQUIERDA EMPRESAS DOS_PUNTOS CORCHETE_IZQUIERDO emps CORCHETE_DERECHO COMA VERSION DOS_PUNTOS opc_s COMA FIRMA_DIGITAL DOS_PUNTOS opc_s LLAVE_DERECHA cierre_arch
Rule 4     sigma -> LLAVE_IZQUIERDA EMPRESAS DOS_PUNTOS CORCHETE_IZQUIERDO emps CORCHETE_DERECHO COMA FIRMA_DIGITAL DOS_PUNTOS opc_s LLAVE_DERECHA cierre_arch
Rule 5     sigma -> LLAVE_IZQUIERDA EMPRESAS DOS_PUNTOS CORCHETE_IZQUIERDO emps CORCHETE_DERECHO COMA VERSION DOS_PUNTOS opc_s LLAVE_DERECHA cierre_arch
Rule 6     sigma -> LLAVE_IZQUIERDA FIRMA_DIGITAL DOS_PUNTOS opc_s COMA VERSION DOS_PUNTOS opc_s COMA EMPRESAS DOS_PUNTOS CORCHETE_IZQUIERDO emps CORCHETE_DERECHO LLAVE_DERECHA cierre_arch
Rule 7     sigma -> LLAVE_IZQUIERDA FIRMA_DIGITAL DOS_PUNTOS opc_s COMA EMPRESAS DOS_PUNTOS CORCHETE_IZQUIERDO emps CORCHETE_DERECHO COMA VERSION DOS_PUNTOS opc_s LLAVE_DERECHA cierre_arch
Rule 8     sigma -> LLAVE_IZQUIERDA FIRMA_DIGITAL DOS_PUNTOS opc_s COMA EMPRESAS DOS_PUNTOS CORCHETE_IZQUIERDO emps CORCHETE_DERECHO LLAVE_DERECHA cierre_arch
Rule 9     sigma -> LLAVE_IZQUIERDA VERSION DOS_PUNTOS opc_s COMA FIRMA_DIGITAL DOS_PUNTOS opc_s COMA EMPRESAS DOS_PUNTOS CORCHETE_IZQUIERDO emps CORCHETE_DERECHO LLAVE_DERECHA cierre_arch
Rule 10    emps -> LLAVE_IZQUIERDA emp LLAVE_DERECHA
Rule 11    emps -> LLAVE_IZQUIERDA emp LLAVE_DERECHA COMA emps
Rule 12    emp -> aper_emp NOMBRE_EMPRESA DOS_PUNTOS CADENA_DE_TEXTO nom_emp COMA FUNDACION DOS_PUNTOS ENTERO COMA DIRECCION DOS_PUNTOS LLAVE_IZQUIERDA diro LLAVE_DERECHA COMA INGRESOS_ANUALES DOS_PUNTOS E_F COMA PYME DOS_PUNTOS BOOLEANO COMA LINK DOS_PUNTOS url COMA DEPARTAMENTOS DOS_PUNTOS CORCHETE_IZQUIERDO dptos CORCHETE_DERECHO cierre_emp
Rule 13    emp -> aper_emp NOMBRE_EMPRESA DOS_PUNTOS CADENA_DE_TEXTO nom_emp COMA FUNDACION DOS_PUNTOS ENTERO COMA DIRECCION DOS_PUNTOS LLAVE_IZQUIERDA diro LLAVE_DERECHA COMA INGRESOS_ANUALES DOS_PUNTOS E_F COMA PYME DOS_PUNTOS BOOLEANO COMA DEPARTAMENTOS DOS_PUNTOS CORCHETE_IZQUIERDO dptos CORCHETE_DERECHO cierre_emp
Rule 14    emp -> aper_emp NOMBRE_EMPRESA DOS_PUNTOS CADENA_DE_TEXTO nom_emp COMA FUNDACION DOS_PUNTOS ENTERO COMA INGRESOS_ANUALES DOS_PUNTOS E_F COMA PYME DOS_PUNTOS BOOLEANO COMA LINK DOS_PUNTOS url COMA DEPARTAMENTOS DOS_PUNTOS CORCHETE_IZQUIERDO dptos CORCHETE_DERECHO cierre_emp
Rule 15    emp -> aper_emp NOMBRE_EMPRESA DOS_PUNTOS CADENA_DE_TEXTO nom_emp COMA FUNDACION DOS_PUNTOS ENTERO COMA INGRESOS_ANUALES DOS_PUNTOS E_F COMA PYME DOS_PUNTOS BOOLEANO COMA DEPARTAMENTOS DOS_PUNTOS CORCHETE_IZQUIERDO dptos CORCHETE_DERECHO cierre_emp
Rule 16    diro -> CALLE DOS_PUNTOS CADENA_DE_TEXTO COMA CIUDAD DOS_PUNTOS CADENA_DE_TEXTO COMA PAIS DOS_PUNTOS CADENA_DE_TEXTO
Rule 17    diro -> CALLE DOS_PUNTOS CADENA_DE_TEXTO COMA PAIS DOS_PUNTOS CADENA_DE_TEXTO COMA CIUDAD DOS_PUNTOS CADENA_DE_TEXTO
Rule 18    diro -> CIUDAD DOS_PUNTOS CADENA_DE_TEXTO COMA CALLE DOS_PUNTOS CADENA_DE_TEXTO COMA PAIS DOS_PUNTOS CADENA_DE_TEXTO
Rule 19    diro -> CIUDAD DOS_PUNTOS CADENA_DE_TEXTO COMA PAIS DOS_PUNTOS CADENA_DE_TEXTO COMA CALLE DOS_PUNTOS CADENA_DE_TEXTO
Rule 20    diro -> PAIS DOS_PUNTOS CADENA_DE_TEXTO COMA CIUDAD DOS_PUNTOS CADENA_DE_TEXTO COMA CALLE DOS_PUNTOS CADENA_DE_TEXTO
Rule 21    diro -> PAIS DOS_PUNTOS CADENA_DE_TEXTO COMA CALLE DOS_PUNTOS CADENA_DE_TEXTO COMA CIUDAD DOS_PUNTOS CADENA_DE_TEXTO
Rule 22    dptos -> LLAVE_IZQUIERDA dpto LLAVE_DERECHA
Rule 23    dptos -> LLAVE_IZQUIERDA dpto LLAVE_DERECHA COMA dptos
Rule 24    dpto -> NOMBRE DOS_PUNTOS CADENA_DE_TEXTO nombre_depto COMA JEFE DOS_PUNTOS opc_s COMA SUBDEPARTAMENTOS DOS_PUNTOS CORCHETE_IZQUIERDO subs CORCHETE_DERECHO
Rule 25    dpto -> NOMBRE DOS_PUNTOS CADENA_DE_TEXTO nombre_depto COMA SUBDEPARTAMENTOS DOS_PUNTOS CORCHETE_IZQUIERDO subs CORCHETE_DERECHO COMA JEFE DOS_PUNTOS opc_s
Rule 26    dpto -> JEFE DOS_PUNTOS opc_s COMA NOMBRE DOS_PUNTOS CADENA_DE_TEXTO nombre_depto COMA SUBDEPARTAMENTOS DOS_PUNTOS CORCHETE_IZQUIERDO subs CORCHETE_DERECHO
Rule 27    dpto -> JEFE DOS_PUNTOS opc_s COMA SUBDEPARTAMENTOS DOS_PUNTOS CORCHETE_IZQUIERDO subs CORCHETE_DERECHO COMA NOMBRE DOS_PUNTOS CADENA_DE_TEXTO nombre_depto
Rule 28    dpto -> SUBDEPARTAMENTOS DOS_PUNTOS CORCHETE_IZQUIERDO subs CORCHETE_DERECHO COMA JEFE DOS_PUNTOS opc_s COMA NOMBRE DOS_PUNTOS CADENA_DE_TEXTO nombre_depto
Rule 29    dpto -> SUBDEPARTAMENTOS DOS_PUNTOS CORCHETE_IZQUIERDO subs CORCHETE_DERECHO COMA NOMBRE DOS_PUNTOS CADENA_DE_TEXTO nombre_depto COMA JEFE DOS_PUNTOS opc_s
Rule 30    dpto -> NOMBRE DOS_PUNTOS CADENA_DE_TEXTO nombre_depto COMA SUBDEPARTAMENTOS DOS_PUNTOS CORCHETE_IZQUIERDO subs CORCHETE_DERECHO
Rule 31    dpto -> SUBDEPARTAMENTOS DOS_PUNTOS CORCHETE_IZQUIERDO subs CORCHETE_DERECHO COMA NOMBRE DOS_PUNTOS CADENA_DE_TEXTO nombre_depto
Rule 32    subs -> LLAVE_IZQUIERDA sub LLAVE_DERECHA
Rule 33    subs -> LLAVE_IZQUIERDA sub LLAVE_DERECHA COMA subs
Rule 34    sub -> NOMBRE DOS_PUNTOS CADENA_DE_TEXTO nombre_sub COMA JEFE DOS_PUNTOS opc_s COMA EMPLEADOS DOS_PUNTOS CORCHETE_IZQUIERDO tras CORCHETE_DERECHO
Rule 35    sub -> NOMBRE DOS_PUNTOS CADENA_DE_TEXTO nombre_sub COMA JEFE DOS_PUNTOS opc_s COMA EMPLEADOS DOS_PUNTOS CORCHETE_IZQUIERDO CORCHETE_DERECHO
Rule 36    sub -> NOMBRE DOS_PUNTOS CADENA_DE_TEXTO nombre_sub COMA JEFE DOS_PUNTOS opc_s COMA EMPLEADOS DOS_PUNTOS NULL
Rule 37    sub -> NOMBRE DOS_PUNTOS CADENA_DE_TEXTO nombre_sub COMA EMPLEADOS DOS_PUNTOS CORCHETE_IZQUIERDO tras CORCHETE_DERECHO COMA JEFE DOS_PUNTOS opc_s
Rule 38    sub -> NOMBRE DOS_PUNTOS CADENA_DE_TEXTO nombre_sub COMA EMPLEADOS DOS_PUNTOS CORCHETE_IZQUIERDO CORCHETE_DERECHO COMA JEFE DOS_PUNTOS opc_s
Rule 39    sub -> NOMBRE DOS_PUNTOS CADENA_DE_TEXTO nombre_sub COMA EMPLEADOS DOS_PUNTOS NULL COMA JEFE DOS_PUNTOS opc_s
Rule 40    sub -> JEFE DOS_PUNTOS opc_s COMA NOMBRE DOS_PUNTOS CADENA_DE_TEXTO nombre_sub COMA EMPLEADOS DOS_PUNTOS CORCHETE_IZQUIERDO tras CORCHETE_DERECHO
Rule 41    sub -> JEFE DOS_PUNTOS opc_s COMA NOMBRE DOS_PUNTOS CADENA_DE_TEXTO nombre_sub COMA EMPLEADOS DOS_PUNTOS CORCHETE_IZQUIERDO CORCHETE_DERECHO
Rule 42    sub -> JEFE DOS_PUNTOS opc_s COMA NOMBRE DOS_PUNTOS CADENA_DE_TEXTO nombre_sub COMA EMPLEADOS DOS_PUNTOS NULL
Rule 43    sub -> JEFE DOS_PUNTOS opc_s COMA NOMBRE DOS_PUNTOS CADENA_DE_TEXTO nombre_sub
Rule 44    sub -> EMPLEADOS DOS_PUNTOS CORCHETE_IZQUIERDO CORCHETE_DERECHO COMA NOMBRE DOS_PUNTOS CADENA_DE_TEXTO nombre_sub
Rule 45    sub -> EMPLEADOS DOS_PUNTOS CORCHETE_IZQUIERDO tras CORCHETE_DERECHO COMA NOMBRE DOS_PUNTOS CADENA_DE_TEXTO nombre_sub
Rule 46    sub -> EMPLEADOS DOS_PUNTOS NULL COMA NOMBRE DOS_PUNTOS CADENA_DE_TEXTO nombre_sub
Rule 47    sub -> NOMBRE DOS_PUNTOS CADENA_DE_TEXTO nombre_sub COMA EMPLEADOS DOS_PUNTOS CORCHETE_IZQUIERDO tras CORCHETE_DERECHO
Rule 48    sub -> NOMBRE DOS_PUNTOS CADENA_DE_TEXTO nombre_sub COMA EMPLEADOS DOS_PUNTOS CORCHETE_IZQUIERDO CORCHETE_DERECHO
Rule 49    sub -> NOMBRE DOS_PUNTOS CADENA_DE_TEXTO nombre_sub COMA EMPLEADOS DOS_PUNTOS NULL
Rule 50    sub -> NOMBRE DOS_PUNTOS CADENA_DE_TEXTO nombre_sub
Rule 51    tras -> LLAVE_IZQUIERDA tra LLAVE_DERECHA
Rule 52    tras -> LLAVE_IZQUIERDA tra LLAVE_DERECHA COMA tras
Rule 53    tras -> NULL
Rule 54    tra -> aper_ul NOMBRE DOS_PUNTOS CADENA_DE_TEXTO nombre_tra COMA EDAD DOS_PUNTOS opc_i COMA CARGO DOS_PUNTOS C_V COMA SALARIO DOS_PUNTOS E_F COMA ACTIVO DOS_PUNTOS BOOLEANO COMA FECHA_CONTRATACION DOS_PUNTOS FECHA COMA PROYECTOS DOS_PUNTOS CORCHETE_IZQUIERDO pros CORCHETE_DERECHO cierre_tabla cierre_ul
Rule 55    tra -> aper_ul NOMBRE DOS_PUNTOS CADENA_DE_TEXTO nombre_tra COMA EDAD DOS_PUNTOS opc_i COMA CARGO DOS_PUNTOS C_V COMA SALARIO DOS_PUNTOS E_F COMA ACTIVO DOS_PUNTOS BOOLEANO COMA FECHA_CONTRATACION DOS_PUNTOS FECHA COMA PROYECTOS DOS_PUNTOS CORCHETE_IZQUIERDO CORCHETE_DERECHO cierre_ul
Rule 56    tra -> aper_ul NOMBRE DOS_PUNTOS CADENA_DE_TEXTO nombre_tra COMA EDAD DOS_PUNTOS opc_i COMA CARGO DOS_PUNTOS C_V COMA SALARIO DOS_PUNTOS E_F COMA ACTIVO DOS_PUNTOS BOOLEANO COMA FECHA_CONTRATACION DOS_PUNTOS FECHA COMA PROYECTOS DOS_PUNTOS NULL cierre_ul
Rule 57    tra -> aper_ul NOMBRE DOS_PUNTOS CADENA_DE_TEXTO nombre_tra COMA EDAD DOS_PUNTOS opc_i COMA CARGO DOS_PUNTOS C_V COMA SALARIO DOS_PUNTOS E_F COMA ACTIVO DOS_PUNTOS BOOLEANO COMA FECHA_CONTRATACION DOS_PUNTOS FECHA cierre_ul
Rule 58    tra -> aper_ul NOMBRE DOS_PUNTOS CADENA_DE_TEXTO nombre_tra COMA CARGO DOS_PUNTOS C_V COMA SALARIO DOS_PUNTOS E_F COMA ACTIVO DOS_PUNTOS BOOLEANO COMA FECHA_CONTRATACION DOS_PUNTOS FECHA COMA PROYECTOS DOS_PUNTOS CORCHETE_IZQUIERDO pros CORCHETE_DERECHO cierre_tabla cierre_ul
Rule 59    tra -> aper_ul NOMBRE DOS_PUNTOS CADENA_DE_TEXTO nombre_tra COMA CARGO DOS_PUNTOS C_V COMA SALARIO DOS_PUNTOS E_F COMA ACTIVO DOS_PUNTOS BOOLEANO COMA FECHA_CONTRATACION DOS_PUNTOS FECHA COMA PROYECTOS DOS_PUNTOS CORCHETE_IZQUIERDO CORCHETE_DERECHO cierre_ul
Rule 60    tra -> aper_ul NOMBRE DOS_PUNTOS CADENA_DE_TEXTO nombre_tra COMA CARGO DOS_PUNTOS C_V COMA SALARIO DOS_PUNTOS E_F COMA ACTIVO DOS_PUNTOS BOOLEANO COMA FECHA_CONTRATACION DOS_PUNTOS FECHA COMA PROYECTOS DOS_PUNTOS NULL cierre_ul
Rule 61    tra -> aper_ul NOMBRE DOS_PUNTOS CADENA_DE_TEXTO nombre_tra COMA CARGO DOS_PUNTOS C_V COMA SALARIO DOS_PUNTOS E_F COMA ACTIVO DOS_PUNTOS BOOLEANO COMA FECHA_CONTRATACION DOS_PUNTOS FECHA cierre_ul
Rule 62    pros -> LLAVE_IZQUIERDA pro LLAVE_DERECHA
Rule 63    pros -> LLAVE_IZQUIERDA pro LLAVE_DERECHA COMA pros
Rule 64    pros -> NULL
Rule 65    pro -> NOMBRE DOS_PUNTOS CADENA_DE_TEXTO COMA ESTADO DOS_PUNTOS E_V COMA FECHA_INICIO DOS_PUNTOS FECHA COMA FECHA_FIN DOS_PUNTOS opc_d tabla_1
Rule 66    pro -> NOMBRE DOS_PUNTOS CADENA_DE_TEXTO COMA FECHA_INICIO DOS_PUNTOS FECHA COMA FECHA_FIN DOS_PUNTOS opc_d tabla_3
Rule 67    pro -> NOMBRE DOS_PUNTOS CADENA_DE_TEXTO COMA ESTADO DOS_PUNTOS E_V COMA FECHA_INICIO DOS_PUNTOS FECHA tabla_2
Rule 68    pro -> NOMBRE DOS_PUNTOS CADENA_DE_TEXTO COMA FECHA_INICIO DOS_PUNTOS FECHA tabla_4
Rule 69    opc_s -> CADENA_DE_TEXTO
Rule 70    opc_s -> NULL
Rule 71    opc_i -> ENTERO
Rule 72    opc_i -> NULL
Rule 73    E_F -> ENTERO
Rule 74    E_F -> FLOTANTE
Rule 75    aper_emp -> <empty>
Rule 76    nom_emp -> <empty>
Rule 77    cierre_emp -> <empty>
Rule 78    nombre_depto -> <empty>
Rule 79    nombre_sub -> <empty>
Rule 80    aper_ul -> <empty>
Rule 81    nombre_tra -> <empty>
Rule 82    cierre_ul -> <empty>
Rule 83    opc_d -> FECHA
Rule 84    opc_d -> NULL
Rule 85    tabla_1 -> <empty>
Rule 86    tabla_2 -> <empty>
Rule 87    tabla_3 -> <empty>
Rule 88    tabla_4 -> <empty>
Rule 89    url -> URL
Rule 90    url -> NULL
Rule 91    cierre_tabla -> <empty>
Rule 92    cierre_arch -> <empty>

Terminals, with rules where they appear

ACTIVO               : 54 55 56 57 58 59 60 61
BOOLEANO             : 12 13 14 15 54 55 56 57 58 59 60 61
CADENA_DE_TEXTO      : 12 13 14 15 16 16 16 17 17 17 18 18 18 19 19 19 20 20 20 21 21 21 24 25 26 27 28 29 30 31 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 54 55 56 57 58 59 60 61 65 66 67 68 69
CALLE                : 16 17 18 19 20 21
CARGO                : 54 55 56 57 58 59 60 61
CIUDAD               : 16 17 18 19 20 21
COMA                 : 2 2 3 3 4 5 6 6 7 7 8 9 9 11 12 12 12 12 12 12 13 13 13 13 13 14 14 14 14 14 15 15 15 15 16 16 17 17 18 18 19 19 20 20 21 21 23 24 24 25 25 26 26 27 27 28 28 29 29 30 31 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 44 45 46 47 48 49 52 54 54 54 54 54 54 55 55 55 55 55 55 56 56 56 56 56 56 57 57 57 57 57 58 58 58 58 58 59 59 59 59 59 60 60 60 60 60 61 61 61 61 63 65 65 65 66 66 67 67 68
CORCHETE_DERECHO     : 1 2 3 4 5 6 7 8 9 12 13 14 15 24 25 26 27 28 29 30 31 34 35 37 38 40 41 44 45 47 48 54 55 58 59
CORCHETE_IZQUIERDO   : 1 2 3 4 5 6 7 8 9 12 13 14 15 24 25 26 27 28 29 30 31 34 35 37 38 40 41 44 45 47 48 54 55 58 59
C_V                  : 54 55 56 57 58 59 60 61
DEPARTAMENTOS        : 12 13 14 15
DIRECCION            : 12 13
DOS_PUNTOS           : 1 2 2 2 3 3 3 4 4 5 5 6 6 6 7 7 7 8 8 9 9 9 12 12 12 12 12 12 12 13 13 13 13 13 13 14 14 14 14 14 14 15 15 15 15 15 16 16 16 17 17 17 18 18 18 19 19 19 20 20 20 21 21 21 24 24 24 25 25 25 26 26 26 27 27 27 28 28 28 29 29 29 30 30 31 31 34 34 34 35 35 35 36 36 36 37 37 37 38 38 38 39 39 39 40 40 40 41 41 41 42 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 54 54 54 54 54 54 54 55 55 55 55 55 55 55 56 56 56 56 56 56 56 57 57 57 57 57 57 58 58 58 58 58 58 59 59 59 59 59 59 60 60 60 60 60 60 61 61 61 61 61 65 65 65 65 66 66 66 67 67 67 68 68
EDAD                 : 54 55 56 57
EMPLEADOS            : 34 35 36 37 38 39 40 41 42 44 45 46 47 48 49
EMPRESAS             : 1 2 3 4 5 6 7 8 9
ENTERO               : 12 13 14 15 71 73
ESTADO               : 65 67
E_V                  : 65 67
FECHA                : 54 55 56 57 58 59 60 61 65 66 67 68 83
FECHA_CONTRATACION   : 54 55 56 57 58 59 60 61
FECHA_FIN            : 65 66
FECHA_INICIO         : 65 66 67 68
FIRMA_DIGITAL        : 2 3 4 6 7 8 9
FLOTANTE             : 74
FUNDACION            : 12 13 14 15
INGRESOS_ANUALES     : 12 13 14 15
JEFE                 : 24 25 26 27 28 29 34 35 36 37 38 39 40 41 42 43
LINK                 : 12 14
LLAVE_DERECHA        : 1 2 3 4 5 6 7 8 9 10 11 12 13 22 23 32 33 51 52 62 63
LLAVE_IZQUIERDA      : 1 2 3 4 5 6 7 8 9 10 11 12 13 22 23 32 33 51 52 62 63
NOMBRE               : 24 25 26 27 28 29 30 31 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 54 55 56 57 58 59 60 61 65 66 67 68
NOMBRE_EMPRESA       : 12 13 14 15
NULL                 : 36 39 42 46 49 53 56 60 64 70 72 84 90
PAIS                 : 16 17 18 19 20 21
PROYECTOS            : 54 55 56 58 59 60
PYME                 : 12 13 14 15
SALARIO              : 54 55 56 57 58 59 60 61
SUBDEPARTAMENTOS     : 24 25 26 27 28 29 30 31
URL                  : 89
VERSION              : 2 3 5 6 7 9
error                : 

Nonterminals, with rules where they appear

E_F                  : 12 13 14 15 54 55 56 57 58 59 60 61
aper_emp             : 12 13 14 15
aper_ul              : 54 55 56 57 58 59 60 61
cierre_arch          : 1 2 3 4 5 6 7 8 9
cierre_emp           : 12 13 14 15
cierre_tabla         : 54 58
cierre_ul            : 54 55 56 57 58 59 60 61
diro                 : 12 13
dpto                 : 22 23
dptos                : 12 13 14 15 23
emp                  : 10 11
emps                 : 1 2 3 4 5 6 7 8 9 11
nom_emp              : 12 13 14 15
nombre_depto         : 24 25 26 27 28 29 30 31
nombre_sub           : 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50
nombre_tra           : 54 55 56 57 58 59 60 61
opc_d                : 65 66
opc_i                : 54 55 56 57
opc_s                : 2 2 3 3 4 5 6 6 7 7 8 9 9 24 25 26 27 28 29 34 35 36 37 38 39 40 41 42 43
pro                  : 62 63
pros                 : 54 58 63
sigma                : 0
sub                  : 32 33
subs                 : 24 25 26 27 28 29 30 31 33
tabla_1              : 65
tabla_2              : 67
tabla_3              : 66
tabla_4              : 68
tra                  : 51 52
tras                 : 34 37 40 45 47 52
url                  : 12 14

Parsing method: LALR

state 0

    (0) S' -> . sigma
    (1) sigma -> . LLAVE_IZQUIERDA EMPRESAS DOS_PUNTOS CORCHETE_IZQUIERDO emps CORCHETE_DERECHO LLAVE_DERECHA cierre_arch
    (2) sigma -> . LLAVE_IZQUIERDA EMPRESAS DOS_PUNTOS CORCHETE_IZQUIERDO emps CORCHETE_DERECHO COMA FIRMA_DIGITAL DOS_PUNTOS opc_s COMA VERSION DOS_PUNTOS opc_s LLAVE_DERECHA cierre_arch
    (3) sigma -> . LLAVE_IZQUIERDA EMPRESAS DOS_PUNTOS CORCHETE_IZQUIERDO emps CORCHETE_DERECHO COMA VERSION DOS_PUNTOS opc_s COMA FIRMA_DIGITAL DOS_PUNTOS opc_s LLAVE_DERECHA cierre_arch
    (4) sigma -> . LLAVE_IZQUIERDA EMPRESAS DOS_PUNTOS CORCHETE_IZQUIERDO emps CORCHETE_DERECHO COMA FIRMA_DIGITAL DOS_PUNTOS opc_s LLAVE_DERECHA cierre_arch
    (5) sigma -> . LLAVE_IZQUIERDA EMPRESAS DOS_PUNTOS CORCHETE_IZQUIERDO emps CORCHETE_DERECHO COMA VERSION DOS_PUNTOS opc_s LLAVE_DERECHA cierre_arch
    (6) sigma -> . LLAVE_IZQUIERDA FIRMA_DIGITAL DOS_PUNTOS opc_s COMA VERSION DOS_PUNTOS opc_s COMA EMPRESAS DOS_PUNTOS CORCHETE_IZQUIERDO emps CORCHETE_DERECHO LLAVE_DERECHA cierre_arch
    (7) sigma -> . LLAVE_IZQUIERDA FIRMA_DIGITAL DOS_PUNTOS opc_s COMA EMPRESAS DOS_PUNTOS CORCHETE_IZQUIERDO emps CORCHETE_DERECHO COMA VERSION DOS_PUNTOS opc_s LLAVE_DERECHA cierre_arch
    (8) sigma -> . LLAVE_IZQUIERDA FIRMA_DIGITAL DOS_PUNTOS opc_s COMA EMPRESAS DOS_PUNTOS CORCHETE_IZQUIERDO emps CORCHETE_DERECHO LLAVE_DERECHA cierre_arch
    (9) sigma -> . LLAVE_IZQUIERDA VERSION DOS_PUNTOS opc_s COMA FIRMA_DIGITAL DOS_PUNTOS opc_s COMA EMPRESAS DOS_PUNTOS CORCHETE_IZQUIERDO emps CORCHETE_DERECHO LLAVE_DERECHA cierre_arch

    LLAVE_IZQUIERDA shift and go to state 2

    sigma                          shift and go to state 1

state 1

    (0) S' -> sigma .



state 2

    (1) sigma -> LLAVE_IZQUIERDA . EMPRESAS DOS_PUNTOS CORCHETE_IZQUIERDO emps CORCHETE_DERECHO LLAVE_DERECHA cierre_arch
    (2) sigma -> LLAVE_IZQUIERDA . EMPRESAS DOS_PUNTOS CORCHETE_IZQUIERDO emps CORCHETE_DERECHO COMA FIRMA_DIGITAL DOS_PUNTOS opc_s COMA VERSION DOS_PUNTOS opc_s LLAVE_DERECHA cierre_arch
    (3) sigma -> LLAVE_IZQUIERDA . EMPRESAS DOS_PUNTOS CORCHETE_IZQUIERDO emps CORCHETE_DERECHO COMA VERSION DOS_PUNTOS opc_s COMA FIRMA_DIGITAL DOS_PUNTOS opc_s LLAVE_DERECHA cierre_arch
    (4) sigma -> LLAVE_IZQUIERDA . EMPRESAS DOS_PUNTOS CORCHETE_IZQUIERDO emps CORCHETE_DERECHO COMA FIRMA_DIGITAL DOS_PUNTOS opc_s LLAVE_DERECHA cierre_arch
    (5) sigma -> LLAVE_IZQUIERDA . EMPRESAS DOS_PUNTOS CORCHETE_IZQUIERDO emps CORCHETE_DERECHO COMA VERSION DOS_PUNTOS opc_s LLAVE_DERECHA cierre_arch
    (6) sigma -> LLAVE_IZQUIERDA . FIRMA_DIGITAL DOS_PUNTOS opc_s COMA VERSION DOS_PUNTOS opc_s COMA EMPRESAS DOS_PUNTOS CORCHETE_IZQUIERDO emps CORCHETE_DERECHO LLAVE_DERECHA cierre_arch
    (7) sigma -> LLAVE_IZQUIERDA . FIRMA_DIGITAL DOS_PUNTOS opc_s COMA EMPRESAS DOS_PUNTOS CORCHETE_IZQUIERDO emps CORCHETE_DERECHO COMA VERSION DOS_PUNTOS opc_s LLAVE_DERECHA cierre_arch
    (8) sigma -> LLAVE_IZQUIERDA . FIRMA_DIGITAL DOS_PUNTOS opc_s COMA EMPRESAS DOS_PUNTOS CORCHETE_IZQUIERDO emps CORCHETE_DERECHO LLAVE_DERECHA cierre_arch
    (9) sigma -> LLAVE_IZQUIERDA . VERSION DOS_PUNTOS opc_s COMA FIRMA_DIGITAL DOS_PUNTOS opc_s COMA EMPRESAS DOS_PUNTOS CORCHETE_IZQUIERDO emps CORCHETE_DERECHO LLAVE_DERECHA cierre_arch

    EMPRESAS        shift and go to state 3
    FIRMA_DIGITAL   shift and go to state 4
    VERSION         shift and go to state 5


state 3

    (1) sigma -> LLAVE_IZQUIERDA EMPRESAS . DOS_PUNTOS CORCHETE_IZQUIERDO emps CORCHETE_DERECHO LLAVE_DERECHA cierre_arch
    (2) sigma -> LLAVE_IZQUIERDA EMPRESAS . DOS_PUNTOS CORCHETE_IZQUIERDO emps CORCHETE_DERECHO COMA FIRMA_DIGITAL DOS_PUNTOS opc_s COMA VERSION DOS_PUNTOS opc_s LLAVE_DERECHA cierre_arch
    (3) sigma -> LLAVE_IZQUIERDA EMPRESAS . DOS_PUNTOS CORCHETE_IZQUIERDO emps CORCHETE_DERECHO COMA VERSION DOS_PUNTOS opc_s COMA FIRMA_DIGITAL DOS_PUNTOS opc_s LLAVE_DERECHA cierre_arch
    (4) sigma -> LLAVE_IZQUIERDA EMPRESAS . DOS_PUNTOS CORCHETE_IZQUIERDO emps CORCHETE_DERECHO COMA FIRMA_DIGITAL DOS_PUNTOS opc_s LLAVE_DERECHA cierre_arch
    (5) sigma -> LLAVE_IZQUIERDA EMPRESAS . DOS_PUNTOS CORCHETE_IZQUIERDO emps CORCHETE_DERECHO COMA VERSION DOS_PUNTOS opc_s LLAVE_DERECHA cierre_arch

    DOS_PUNTOS      shift and go to state 6


state 4

    (6) sigma -> LLAVE_IZQUIERDA FIRMA_DIGITAL . DOS_PUNTOS opc_s COMA VERSION DOS_PUNTOS opc_s COMA EMPRESAS DOS_PUNTOS CORCHETE_IZQUIERDO emps CORCHETE_DERECHO LLAVE_DERECHA cierre_arch
    (7) sigma -> LLAVE_IZQUIERDA FIRMA_DIGITAL . DOS_PUNTOS opc_s COMA EMPRESAS DOS_PUNTOS CORCHETE_IZQUIERDO emps CORCHETE_DERECHO COMA VERSION DOS_PUNTOS opc_s LLAVE_DERECHA cierre_arch
    (8) sigma -> LLAVE_IZQUIERDA FIRMA_DIGITAL . DOS_PUNTOS opc_s COMA EMPRESAS DOS_PUNTOS CORCHETE_IZQUIERDO emps CORCHETE_DERECHO LLAVE_DERECHA cierre_arch

    DOS_PUNTOS      shift and go to state 7


state 5

    (9) sigma -> LLAVE_IZQUIERDA VERSION . DOS_PUNTOS opc_s COMA FIRMA_DIGITAL DOS_PUNTOS opc_s COMA EMPRESAS DOS_PUNTOS CORCHETE_IZQUIERDO emps CORCHETE_DERECHO LLAVE_DERECHA cierre_arch

    DOS_PUNTOS      shift and go to state 8


state 6

    (1) sigma -> LLAVE_IZQUIERDA EMPRESAS DOS_PUNTOS . CORCHETE_IZQUIERDO emps CORCHETE_DERECHO LLAVE_DERECHA cierre_arch
    (2) sigma -> LLAVE_IZQUIERDA EMPRESAS DOS_PUNTOS . CORCHETE_IZQUIERDO emps CORCHETE_DERECHO COMA FIRMA_DIGITAL DOS_PUNTOS opc_s COMA VERSION DOS_PUNTOS opc_s LLAVE_DERECHA cierre_arch
    (3) sigma -> LLAVE_IZQUIERDA EMPRESAS DOS_PUNTOS . CORCHETE_IZQUIERDO emps CORCHETE_DERECHO COMA VERSION DOS_PUNTOS opc_s COMA FIRMA_DIGITAL DOS_PUNTOS opc_s LLAVE_DERECHA cierre_arch
    (4) sigma -> LLAVE_IZQUIERDA EMPRESAS DOS_PUNTOS . CORCHETE_IZQUIERDO emps CORCHETE_DERECHO COMA FIRMA_DIGITAL DOS_PUNTOS opc_s LLAVE_DERECHA cierre_arch
    (5) sigma -> LLAVE_IZQUIERDA EMPRESAS DOS_PUNTOS . CORCHETE_IZQUIERDO emps CORCHETE_DERECHO COMA VERSION DOS_PUNTOS opc_s LLAVE_DERECHA cierre_arch

    CORCHETE_IZQUIERDO shift and go to state 9


state 7
